dsc/dsc.component.scss
.dsc_detail {

	$base-color: #f5f5f5;
	$box-color: #ffffff;
	$border-color: #ebebeb;
	$border-selected-color: #000;
	$border-hoover-color: #000;
	$detail-text: rgb(51, 51, 51);
	$main-text: rgb(0, 0, 0);

	$border-radius: 2.5vmin;
	
	* {
	  box-sizing: border-box;
	}

	

	// Safari workaround for svg height, we set in with js due to a bug in webkit
	@media screen and(-webkit-min-device-pixel-ratio:0) {
		.box > svg  {
			height: 76vh;
		}
	}

	h1, h2, h3, h4 {
	  text-align: center;
		padding: 0;
		margin: 0;
	}

	img {
		border-radius: 0;
		border: 0;
		background-color: $base-color;
		box-shadow: none;
	}
		
	.navbar > .imgError {
		@extend img;
		background-color: red;
  	mask: url(/assets/logo.png) no-repeat center / contain;
	}
	
	

	// Is set to the navitem div if the menu is open
	.navitem-active {
		position: relative;
		z-index: 3;
		
		border: 3px $border-hoover-color solid !important;
	}

	// container of a navitem with its dropup
	.navitem-dropup {
		height: 100%;
		width: 100%;
		position: relative;
	}

	.navbar > * > * {
		height: 100%;
	}

	.navbarTop {
		padding: 1vh 1vh 0 1vh;
	}
	.navbarBottom {
		padding: 0 1vh 1vh 1vh;
	}
	.main {
		padding: 0 1vh 0 1vh;
	}



	// Applied to all div with onclick action
	.button {
		cursor: pointer;
		border: 3px transparent solid !important;
	}
	.buttonSelected {
		position: relative;
		z-index: 3;
		border: 3px $border-selected-color solid !important;
	}
	.navbar .button:hover {
		border: 3px $border-hoover-color solid !important;
	}



	.navbar {
		// Main Navbar text
	  h3 {
	    height: 40%;
	    font-size: 3vmin;
			
			color: $main-text;
			font-weight: 500;
			white-space: nowrap;
			padding: 0 0.5vmin 0 0.5vmin;
	  }
		// Navbar top and bottom label
	  h4 {
	    height: 30%;
	    font-size: 2vmin;
			color: $detail-text;
			font-weight: 300;
			white-space: nowrap;
	  }
		
		.navitem {
			height: 100%;
			width: 100%;
			@extend .box;
		}
	}







	.box {
		background-color: $box-color;
		border: 1px $border-color solid;
		overflow: hidden;
		border-radius: $border-radius;
		box-shadow: 0px 4px 8px 0 rgba(199, 199, 199, 0.2);
	}

	.contentBox {
		@extend .box;
		padding-bottom: 5px;
		
		h3 {
			margin: 5px;
			margin-bottom: 15px;
			font-size: 2.5vmin;
		}
	}


	.modalBackground {
		position: absolute;
	  width: 100%;
	  height: 100%;
		left: 0%;
	  top: 0%;
		background-color: rgba(0, 0, 0, 0.5);
		
		.modal {
		  position: fixed;
		  width: 50%;
		  height: 70%;
		  left: 25%;
		  top: 10%;
			
			@extend .box;
			
			h1 {
				padding: 1vmin 0 1vmin 0;
				border-bottom: 1px $border-color solid;
			}
			
			.exit {
				// right: 0;
				padding-right: 2vmin;
				float: right;
			}
			
			.content {
				padding: 2vmin;
			}
		}
	}













	// Font sizes
	.bold {
		font-weight: bold;
	}






	.dropup-content {
	 position: absolute;
	 bottom: 12vmin;
	 padding-bottom: 1vmin;
	 z-index: 2;
	}

	.dropup-content-big {
		position: absolute;
		width: 400%;
		margin-left: -100%;
	}

	.dropup-content-normal {
		width: 100%;
	}

	.dropup-content .box {
	  text-align: center;
	  background-color: #fff;
	  margin: 1vmin 0 1vmin 0;
	  padding: 2vmin 0 2vmin 0;
	  font-size: 3vmin;
		border: 1px $border-color solid;
		border-radius: $border-radius;
	  color: black;
	  text-decoration: none;
	  display: block;
	}

}


.grayBackground {
	position: absolute;
	width: 100%;
	height: 100%;
	left: 0%;
	top: 0%;
	background-color: rgba(160, 160, 160, 0.7);
	z-index: 1;
}

